--- a/completeness.tex
+++ b/completeness.tex
@@ -8,7 +8,7 @@
 
 \subsection{Completeness}
 
-An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the start-year of completeness and the completeness magnitude, which are both parameters that are later used in the seismic analysis process. The start-year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation for a certain magnitude range \myrevision{which in this study we use these values in estimating $a-values$ of smoothed seismic hazard, and the completeness magnitude ($M_c$) is the magnitude above which the seismic catalog of a region can be considered complete within a certain time period. \myrevision{ We use $M_c$ for each catalog to compute the $b-value$ and $M_{max}$}
+An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the start-year of completeness and the completeness magnitude, which are both parameters that are later used in the seismic analysis process. The start-year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation for a certain magnitude range \myrevision{which in this study we use these values in estimating $a-values$ of smoothed seismic hazard}, and the completeness magnitude ($M_c$) is the magnitude above which the seismic catalog of a region can be considered complete within a certain time period. \myrevision{ We use $M_c$ for each catalog to compute the $b-value$ and $M_{max}$}
 
 The start-year of completeness is commonly identified by inspection. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line. This is done for different magnitude ranges. Following this approach, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7. Our choices are illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our selection of the year of completeness in each case. The values shown in this figure and those corresponding to the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}. For events $M_w>7$, in which case there are insufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
 
