--- a/table-pga.tex
+++ b/table-pga.tex
@@ -2,7 +2,7 @@
 
 \begin{table*}[t]
 \centering
-\caption{Comparison of expected PGA values for selected cities in northern Iran between results obtained in this study and those of others previous studies. In our results, the values of the R and U models correspond to mean PGA values as shown also in Fig.~\ref{fig:pga}, and the (R,U) model values correspond to the combination of the R and U models shown in Fig.~\ref{fig:pga.ru.std}. The following codes are used for the references of other studies.
+\caption{Comparison of expected PGA values \myrevision{(in $g$)} for selected cities in northern Iran between results obtained in this study and those of others previous studies. In our results, the values of the R and U models correspond to mean PGA values as shown also in Fig.~\ref{fig:pga}, and the (R,U) model values correspond to the combination of the R and U models shown in Fig.~\ref{fig:pga.ru.std}. The following codes are used for the references of other studies.
     Gh03: \citet{Ghodrati2003},
     Gh08: \citet{Ghodrati2008},
     Va11: \citet{Vafaie2011},
@@ -12,6 +12,7 @@
     Go14: \citet{Golara2014},
     Az14: \citet{Abdollahzadeh2014a},
     Bo15: \citet{Boostan2015}.
+    Kh16: \citet{Khodaverdian_2016_BSSA}
     }
 \begin{tabular}{lccccccccc}
     \hline                                                                                                              \\[-1.6ex]
@@ -44,7 +45,9 @@
             &   2\%  &&   --        & 0.30--0.90  &   --        &   --        &   --        &             &   --        \\
     Gh08    &  10\%  &&   --        &   --        &   --        &   0.10      &   --        &             &   --        \\
             &   2\%  &&   --        &   --        &   --        &   0.20      &   --        &             &   --        \\
-    Gh03    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\[0.6ex]
+    Gh03    &  10\%  &&   --        &   --        &   --        &   --        &   --        & 0.37--0.42  &   --        \\
+                 &  2\%  &&  0.30--0.40   & 0.30--0.40  & 0.60--0.70  & 0.30--0.40  & 0.30--0.40  & 0.30--0.40  & 0.20--0.30  \\
+     Kh16    & 10\% &&  0.15--0.20   & 0.15--0.20  & 0.30--0.35  & 0.15--0.20  & 0.15--0.20  & 0.15--0.20  & 0.1--0.15    \\[0.6ex]
     \hline                                                                                                              \\[-1.6ex]
     \multicolumn{10}{l}{\small{${}^{*}$ Used surface-wave magnitude $M_s$ 4.0 as magnitude threshold}}                  \\
     \multicolumn{10}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for Central-East and Alborz-Azerbaijan as magnitude threshold}}    
