tables are updated.

--- a/completeness.tex
+++ b/completeness.tex
@@ -31,17 +31,17 @@ The values of $M_c$ for different time intervals and seismic regions are used to
     \begin{tabular}{lccccrcccccc}
         \cline{2-12}                                                                                  			\\[-1.6ex]
                         & \multicolumn{5}{c}{Year for $M_w$ ranges} 
-                                                            & & \multicolumn{3}{c}{$M_c$ for sub-catalogs} & &$M_c$\\
+                                                            & & \multicolumn{3}{c}{$M_c$ for sub-catalogs} & & \\
         \cline{2-6} \cline{8-10}                                                                      			\\[-1.6ex]
                         & 3--4 & 4--5 & 5--6 & 6--7 & \multicolumn{1}{c}{$>7$} 
-                                                            & & 1800--1899 & 1900--1999 & 2000--2015  & & Whole	\\[0.6ex]
+                                                            & & 1800--1899 & 1900--1999 & 2000--2015  	\\[0.6ex]
         \hline                                                                                        			\\[-1.6ex]
-        Azerbaijan      & 1961 & 1961 & 1900 & 1581 & 1042  & &     6.0    &     5.0    &     4.2     & &  4.2 	\\
-        Alborz          & 2005 & 1961 & 1900 & 1664 &--401  & &     6.2    &     5.0    &     3.5     & &  4.3 	\\
-        Kopeh Dagh      & 2005 & 1950 & 1924 & 1673 &    9  & &     6.1    &     5.0    &     4.0     & &  4.9 	\\
-        Zagros          & 2005 & 1961 & 1950 & 1853 & 1439  & &     5.3    &     4.8    &     3.9     & &  4.8 	\\
-        Central-East    & 2005 & 1961 & 1900 & 1837 &  762  & &     5.5    &     4.8    &     4.0     & &  4.8 	\\
-        Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401  & &     6.1    &     4.8    &     3.8     & &  4.8 	\\[0.5ex]
+        Azerbaijan      & 2005 & 1961 & 1900 & 1581 & 1042  & &     5.8    &    4.9    &     3.6    \\
+        Alborz          & 2005 & 1961 & 1900 & 1664 &--401  & &     6.2    &     5.0    &     3    \\
+        Kopeh Dagh      & 2005 & 1950 & 1924 & 1673 &    9  & &     6.1    &     5.0    &     3.9    \\
+        Zagros          & 2005 & 1961 & 1950 & 1853 & 1439  & &     5.3    &     4.8    &     3.9     \\
+        Central-East    & 2005 & 1961 & 1900 & 1837 &  762  & &     5.5    &     4.8    &     3.6   \\
+        Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401  & &     6.1    &     4.9    &     3.9   \\[0.5ex]
         \hline 
     \end{tabular}
     \label{tab:completeness} 
