GMPEs, and logic tree figures added. Text modified up to Results and Analysis section.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,3 @@
 % 
-This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield good fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh; and for completeness, we also consider the contribution of parts of other neighboring seismic zones that fall within our region of interest. In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are computed for each seismic zone separately, and for the entire region of interest as a single uniform seismotectonic region. We also consider the combination of these two basic models. The results are presented in terms of expected peak ground acceleration maps and hazard curves at selected locations, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We analyze our results in light of similar estimates available in the literature and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
+This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield good fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh; and for completeness, we also consider the contribution of parts of other neighboring seismic zones that fall within our region of interest. In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are computed for each seismic zone separately, and for the entire region of interest as a single uniform seismotectonic region. We also consider the combination of these two basic models. The results are presented in terms of expected peak ground acceleration maps and hazard curves at selected locations, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. \myrevision{According to this study, maximum hazard happened at the left side of the North Tabriz (1g, 0.62g) , and the right side of the North Alborz faults (0.94 g,0.55 g) for 2 and 10 percent of probability of exceedance in 50 years.}. We analyze our results in light of similar estimates available in the literature and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
 
