--- a/response.tex
+++ b/response.tex
@@ -256,7 +256,7 @@ line 224 $\to$ Why did you use this method? What are the benefits of one or the 
 \comment{18}{%
 line 232 $\to$ It is unclear how you chose Mc. In some cases, it looks like you chose the peak goodness-of-fit value, but in others you did not. Please be more specific about how Mc was chosen.
 }
-\response{Response will be here.}
+\response{According to Wiemer and Wyss (2000), the priority is picking the magnitude which has the peak goodness-of-fit value. However at some cases for two or a couple of magnitudes the goodness-of-fit scores are not considerably different. In these cases, we pick the minimum magnitude, even though it doesn't have the peak goodness-of-fit value, in order to preserve the valuable earthquake event data.}
 
 \comment{19}{%
 line 267 $\to$ add 'and'
@@ -341,7 +341,7 @@ line 422 $\to$ I would have stated this differently. It looks like the lower b-v
 \comment{35}{%
 line 428 $\to$ Why equal weights?
 }
-\response{We added a comprehensive logic tree analysis after revision.}
+\response{We added a comprehensive logic tree analysis after revision and modified the weights. Please see the text.}
 
 \comment{36}{%
 line 431 $\to$ I'm not sure I quite understand this. The standard deviation in the attenuation relation is considered aleatory uncertainty and is present within the hazard curve. Adding it as epistemic as well will cause double counting. If you want to include figure 10, a proper logic tree analysis to include more forms of epistemic uncertainty should be performed. For example, add branches for uncertainty in which GMPE you choose, uncertainty in b-value, uncertainty in Mmax, uncertainty in a-value, uncertainty in smoothing parameter, etc.
@@ -430,7 +430,7 @@ line 509 $\to$  Should this be Sunset?}
 
 \comment{54}{%
 p 25, table2 $\to$ What did you do for the earthquakes occurring outside of these five zones?}
-\response{There are earthquakes out of the regions, mainly above the Caspian see. Since those area are not in our region of interest, and are fairly far from our region, we ignored them.}
+\response{There are earthquakes out of the regions, mainly above the Caspian see. Since those area are not in our region of interest (They mainly are in country of Azerbaijan), and are fairly far from our region, we ignored them.}
 
 \comment{55}{%
 p 26, table3 $\to$ Specify units.}
