--- a/results.tex
+++ b/results.tex
@@ -29,7 +29,7 @@ Our choice for the threshold magnitude is based on the assumption that at the lo
 
 In the R models, we computed the probability of exceedance of the ground motion separately for each region and then added their exceedance rates at a given level of ground motion in order to have the contribution of all regions for any given grid point within the region of interest. The results are obtained in the form of annual rate of exceedance. Expected PGA values are therefore a ``slice'' of the actual hazard curves cut across all grid points for a chosen exceedance rate.
 
-Fig.~\ref{fig:pga} shows the expected mean PGA values obtained using the selected attenuation relationship in units of gravity (g) throughout the region of interest for the different models, R2, R10, U2 and U10. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. For the R model results shown in Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Kopeh Dagh region (near the border with Turkmenistan), and in a small area half-way between the city of Karaj and the Piranshahr fault, where a small concentration of events can be observed in Fig.~\ref{fig:catalog}b, as well as along the Piranshahr and Morvarid fault lines between the Zagros and Azerbaijan seismic regions (see Fig.~\ref{fig:selected}a for reference). The Azerbaijan seismic zone does not present equally high levels of expected ground motion. For the U model results shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
+Fig.~\ref{fig:pga} shows the expected mean PGA values obtained \myrevision{as first and second branch of the logic tree approach} for the different models, R2, R10, U2 and U10. As can be expected, the highest PGA values are associated with the R2 and U2 models, and the lowest with the R10 and U10 models. For the R model results shown in Fig.~\ref{fig:pga}a, the highest levels of expected ground motion occur in the Kopeh Dagh region (near the border with Turkmenistan), and in a small area half-way between the city of Karaj and the Piranshahr fault, where a small concentration of events can be observed in Fig.~\ref{fig:catalog}b, as well as along the Piranshahr and Morvarid fault lines between the Zagros and Azerbaijan seismic regions (see Fig.~\ref{fig:selected}a for reference). The Azerbaijan seismic zone does not present equally high levels of expected ground motion. For the U model results shown in Fig.~\ref{fig:pga}b, on the other hand, the highest levels of expected ground motion are observed precisely in the area corresponding to the Azerbaijan seismic region, especially in the vicinity of the North Tabriz Fault system (see Fig.~\ref{fig:selected} for reference).
 
 In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. As it can be seen, this is true practically throughout the whole region at very low levels, and in particular in the north-central region at a moderate level of up to 0.2 g and more predominantly in the north-western region of Azerbaijan at levels of about 0.2 to 0.45 g.
 
@@ -42,7 +42,7 @@ As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows
 \begin{figure*}[th!]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-11} 
-    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U).}
+    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U). \myrevision{Dashed lines represent the 0.0021 and 0.000404 annual probability of exceedance corresponding to probability of exceedance of 10 and 2 percent in 50 years.}}
     \label{fig:hazardcurve}
 \end{figure*}
 
